--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ header {
 }
 
 .img-list2 {
-    background-color: #D9D9D9;
+    background-color: #4FB0C7;
 }
 
 .img-list2 ul {
@@ -213,3 +213,64 @@ header {
 .hofudb-content {
     display: inline-table;
 }
+
+/* footer on the bottom with company logo and social media links */
+
+footer {
+    display: flex;
+    justify-content: center;
+    padding: 40px;
+    background-color: #4FB0C7;
+    color: #333;
+  }
+  
+  .info__container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .logo__container {
+    margin-bottom: 25px;
+   }
+    
+   
+   .social{
+     bottom: 20px;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+   }
+   .social li
+   {
+     list-style: none;
+   }
+   .social li a
+   {
+     display: inline-block;
+     padding: 15px;
+     transform: scale(0.5);
+     transition: 0.5s;
+   }
+   .social li a:hover
+   {
+     transform: scale(0.5) translateY(-15px);
+   }
+   
+   /* contact card underneath social media links */
+   
+   .contact__card {
+     display:flex;
+     flex-direction: column;
+     justify-content: center;
+     text-align: center;
+   }
+   
+   .contact__card__title {
+     margin-bottom: 10px;
+   }
+   
+   .contact__card p {
+     margin-bottom: 5px;
+     font-weight: 100;
+     color: #fff;
+   }
